--- a/pepper/templates/users/reset_password.html
+++ b/pepper/templates/users/reset_password.html
@@ -1,7 +1,11 @@
-This is the reset page
+{% extends 'layouts/base.html' %}
+{% block content %}
+<h1>Please enter your new password</h1>
 
 <form method="POST" action="">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 	<input type="password" name="password" placeholder="password">
 	<input type="password" name="password-check" placeholder="Reenter password">
 	<button type="submit">Submit</button>
 </form>
+{% block content %}
