--- a/pepper/templates/corporate/login.html
+++ b/pepper/templates/corporate/login.html
@@ -4,6 +4,7 @@
 	<div class="center col-md-4 col-md-offset-4">
 	    <h2>{{ config.HACKATHON_NAME }} Corporate Sign-In</h2>
 	    <form action="" method="post">
+              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
 	        <input type="email" placeholder="Email" name="email" required>
 	        <input type="password" placeholder="Password" name="password" required>
 	        <div class="form-group">
