--- a/pepper/templates/users/admin/check_in.html
+++ b/pepper/templates/users/admin/check_in.html
@@ -1,34 +1,35 @@
 {% extends 'layouts/admin_base.html' %}
 {% block content %}
 
-	<h1>Accept Users</h1>
-	<form action="{{ url_for('manual-check-in') }}" method="POST">
-		<input type="email" name="email" placeholder="User email">
-{#		<div class="select">#}
-{#		  <select name="status">#}
-{#			  <option value="ACCEPTED">ACCEPTED</option>#}
-{#		  </select>#}
-{#		  <div class="select__arrow"></div>#}
-{#		</div>#}
-		<button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></button>
-	</form>
-		<script>
-	$(function(){
-    $("#user-id").focus();
+<h1>Accept Users</h1>
+<form action="{{ url_for('manual-check-in') }}" method="POST">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+  <input type="email" name="email" placeholder="User email">
+  {#		<div class="select">#}
+    {#		  <select name="status">#}
+      {#			  <option value="ACCEPTED">ACCEPTED</option>#}
+      {#		  </select>#}
+    {#		  <div class="select__arrow"></div>#}
+    {#		</div>#}
+  <button type="submit" class="confirm">Submit <i class="fa fa-arrow-circle-o-right" aria-hidden="true"></i></button>
+</form>
+<script>
+$(function(){
+  $("#user-id").focus();
 });
-	</script>
-	<br>
-	<p>    List of pending users</p>
+</script>
+<br>
+<p>    List of pending users</p>
 
-    <ul>
-    </ul>
-    <ul>
-    {% for user in users %}
-		<div class="row">
-		<div class="col-md-6">
-        {{ user.fname }} {{ user.lname }}
-		</div>
-		</div>
-    {% endfor %}
-    </ul>
+<ul>
+</ul>
+<ul>
+  {% for user in users %}
+  <div class="row">
+    <div class="col-md-6">
+      {{ user.fname }} {{ user.lname }}
+    </div>
+  </div>
+  {% endfor %}
+</ul>
 {% endblock content %}
