--- a/pepper/templates/users/admin/internal_login.html
+++ b/pepper/templates/users/admin/internal_login.html
@@ -1,7 +1,8 @@
 {% extends 'layouts/admin_base.html' %}
 {% block content %}
 <form method="POST" action="">
-	<input type="text" name="id">
-	<button type="submit">Submit</button>
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+  <input type="text" name="id">
+  <button type="submit">Submit</button>
 </form>
 {% endblock %}
