--- a/pepper/templates/users/edit_information.html
+++ b/pepper/templates/users/edit_information.html
@@ -11,6 +11,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
 </div>
 
 <form method="POST" action="" enctype="multipart/form-data" id="edit-information">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
   <div class="row">
     <div class="col-md-6">
       <label for="first-name" class="required">First name</label>
@@ -42,7 +43,7 @@ if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
       </div>
     </div>
     <div class="col-md-6" id="input-gender-container">
-      <label for="input-gender required">Please specify</label>
+      <label for="input-gender" class="required">Please specify</label>
       <input type="text" placeholder="Gender" id="input-gender" name="gender_other" class="info-field" {% if not required and user.gender not in ['Female', 'Male', 'Non-Binary', 'I prefer not to say'] %}value="{{ user.gender }}"{% endif %}>
     </div>
   </div>
