--- a/pepper/templates/users/forgot_password.html
+++ b/pepper/templates/users/forgot_password.html
@@ -4,8 +4,9 @@
 <div class="center col-md-4 col-md-offset-4">
     <h2>Forgot your password?</h2>
     <form action="" method="post">
-        <input type="email" placeholder="Email" name="email" required>
-        <button type="submit">Submit</button>
+      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+      <input type="email" placeholder="Email" name="email" required>
+      <button type="submit">Submit</button>
     </form>
 </div>
 {% endblock %}
